--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
-  "name": "encore-ts-starter",
+  "name": "qwikskin-sell",
   "private": true,
   "version": "0.0.1",
-  "description": "Encore Typescript Starter",
+  "description": "Qwik.Skin Sell Service",
   "license": "MPL-2.0",
   "type": "module",
-  "devDependencies": {
-    "@types/node": "^20.5.7",
-    "typescript": "^5.2.2"
-  },
   "dependencies": {
     "encore.dev": "^1.49.3",
     "steam-user": "^4.29.0",
